--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@import "magnific-popup.css";
 @font-face {
   font-family: 'museosanscyrl-webfont';
   src: url('../fonts/museosanscyrl-webfont.woff') format('woff'), url('../fonts/museosanscyrl-webfont.woff2') format('woff2');
@@ -383,7 +382,8 @@ template {
 .btn--main {
   display: block;
   text-align: center;
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   line-height: 80px;
   height: 80px;
   /*выравнвание по вертикали*/
@@ -481,17 +481,13 @@ template {
   position: relative;
   width: 100%;
   background-color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  /*display: flex;*/
 }
 .form__num {
   display: block;
   position: absolute;
   right: 0;
-  top: 50%;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
+  top: -15px;
   pointer-events: none;
   max-width: 110px;
   height: 65px;
@@ -643,7 +639,7 @@ input[type=range]::-ms-fill-lower {
   border: 1px solid #fbd741;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-  font-family: 'Montserrat', Arial, sans-serif;
+  font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
 }
 .form__input::-webkit-input-placeholder {
   color: #000000;
@@ -699,16 +695,23 @@ input[type=range]::-ms-fill-lower {
 }
 */
 /*------------form-----------------*/
-/*
 .popap__title {
-    margin: 0;
-    padding: 0;
-    font-size: 24px;
-    font-weight: 800;
-    margin-bottom: 20px;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  font-size: 30px;
+  margin-bottom: 20px;
+  font-family: 'museosanscyrl_900-webfont', Helvetica, Arial, sans-serif;
+  text-align: center;
 }
-
+.popap__subtitle {
+  margin: 0;
+  padding: 0;
+  font-size: 18px;
+  font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
+  margin-bottom: 20px;
+  text-align: center;
+}
+/*
 .popap-wrapper {
     position: absolute;
     z-index:90;
@@ -930,6 +933,81 @@ input[type=range]::-ms-fill-lower {
 .popup--form #username {
   margin: 0 0 20px;
 }
+/*------------popap form------------*/
+form input {
+  outline: none;
+  border: 1px solid #fbd741;
+  border-radius: 10px;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 18px 20px;
+  font-size: 16px;
+  font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
+}
+form .btn_block {
+  text-align: center;
+  margin: 30px auto 0;
+}
+form .btn_block .btn {
+  margin: 0 auto;
+  border: 0;
+  cursor: pointer;
+}
+/*form .checkbox {
+  display: none;
+}*/
+form label {
+  font-size: 12px;
+  text-align: center;
+  width: 100%;
+  display: block;
+  margin: 12px 0 0;
+}
+form label span {
+  display: inline-block;
+  padding: 0 0 0 24px;
+  position: relative;
+}
+/*form label span:before {
+  position: absolute;
+  width: 16px;
+  height: 16px;
+  left: 0;
+  top: -2px;
+  content: '';
+  background: url(../img/check.png);
+}
+form input[type=checkbox]:checked + label span:before {
+  background: url(../img/check2.png);
+}*/
+.popup {
+  background: #fff;
+  border-radius: 8px;
+  padding: 30px 30px;
+  text-align: left;
+  position: relative;
+  margin: 0 auto;
+}
+.form__text {
+  font-size: 16px;
+  font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
+}
+.form__text a {
+  color: #000000;
+}
+.popup--success {
+  max-width: 300px;
+}
+.popup--form {
+  max-width: 500px;
+  padding: 30px 60px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+.popup--form #username {
+  margin: 0 0 20px;
+}
 .main {
   width: 100%;
   height: 100%;
@@ -1023,7 +1101,7 @@ input[type=range]::-ms-fill-lower {
 }
 .main__social {
   margin-left: auto;
-  margin-right: 20px;
+  margin-right: 10px;
 }
 .main__phone {
   display: -webkit-box;
@@ -1287,7 +1365,7 @@ input[type=range]::-ms-fill-lower {
   background-color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-top: 50px;
+  padding-top: 10px;
   padding-bottom: 50px;
 }
 .description__items {
@@ -1488,7 +1566,7 @@ input[type=range]::-ms-fill-lower {
   background-color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
 }
 .calculator__wrapper {
   -webkit-box-sizing: border-box;
@@ -1575,13 +1653,13 @@ input[type=range]::-ms-fill-lower {
   text-align: right;
   font-size: 48px;
   position: relative;
-  padding-right: 60px;
+  padding-right: 70px;
   color: #000000;
   font-family: 'museosanscyrl_900-webfont', Helvetica, Arial, sans-serif;
 }
 .why__main-title::after {
   position: absolute;
-  top: -40px;
+  top: -45px;
   right: 0px;
   content: "";
   width: 104px;
@@ -1622,6 +1700,9 @@ input[type=range]::-ms-fill-lower {
       -ms-flex-align: center;
           align-items: center;
   text-align: center;
+}
+.why__item--big {
+  width: 30%;
 }
 .why__item p,
 .why__item h3 {
@@ -1764,7 +1845,7 @@ input[type=range]::-ms-fill-lower {
   right: -40%;
 }
 .plan__4 {
-  top: 40%;
+  top: 37%;
   right: -37%;
 }
 .plan__5 {
@@ -1782,22 +1863,17 @@ input[type=range]::-ms-fill-lower {
 }
 .sale {
   width: 100%;
-  /*height: 100vh;*/
   background-color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  /*background-image: url(../img/bg2.png);
-    background-size: 1400px 780px;
-    background-repeat: no-repeat;
-    background-position: center;*/
 }
 .sale__wrapper {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0 auto;
-  max-width: 1366px;
-  padding-left: 15px;
-  padding-right: 15px;
+  max-width: 1920px;
+  /*padding-left: 15px;
+	padding-right: 15px;*/
   position: relative;
 }
 .sale__wrapper img {
@@ -1856,7 +1932,6 @@ input[type=range]::-ms-fill-lower {
 }*/
 .contacts {
   width: 100%;
-  /*height: 100vh;*/
   background-color: #fff;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1939,6 +2014,9 @@ input[type=range]::-ms-fill-lower {
   top: 0;
   left: 0;
 }
+.contacts__map-mob {
+  display: none;
+}
 .footer {
   width: 100%;
   background-color: #fff;
@@ -1966,7 +2044,7 @@ input[type=range]::-ms-fill-lower {
 .footer__privacy {
   text-align: right;
   padding-top: 5px;
-  padding-bottom: 10px;
+  padding-bottom: 5px;
 }
 .footer__privacy a {
   color: #000;
@@ -1982,7 +2060,7 @@ input[type=range]::-ms-fill-lower {
 .development {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  max-width: 1170px;
+  max-width: 1200px;
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
@@ -1991,16 +2069,424 @@ input[type=range]::-ms-fill-lower {
   padding-bottom: 20px;
 }
 .development__text {
+  text-decoration: none;
   color: #000000;
   font-size: 12px;
   font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
+}
+/* Magnific Popup CSS */
+.mfp-bg {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1042;
+  overflow: hidden;
+  position: fixed;
+  background: #0b0b0b;
+  opacity: 0.8;
+}
+.mfp-wrap {
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1043;
+  position: fixed;
+  outline: none !important;
+  -webkit-backface-visibility: hidden;
+}
+.mfp-container {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  padding: 0 8px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.mfp-container:before {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+}
+.mfp-align-top .mfp-container:before {
+  display: none;
+}
+.mfp-content {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  margin: 0 auto;
+  text-align: left;
+  z-index: 1045;
+}
+.mfp-inline-holder .mfp-content,
+.mfp-ajax-holder .mfp-content {
+  width: 100%;
+  cursor: auto;
+}
+.mfp-ajax-cur {
+  cursor: progress;
+}
+.mfp-zoom-out-cur,
+.mfp-zoom-out-cur .mfp-image-holder .mfp-close {
+  cursor: -webkit-zoom-out;
+  cursor: zoom-out;
+}
+.mfp-zoom {
+  cursor: pointer;
+  cursor: -webkit-zoom-in;
+  cursor: zoom-in;
+}
+.mfp-auto-cursor .mfp-content {
+  cursor: auto;
+}
+.mfp-close,
+.mfp-arrow,
+.mfp-preloader,
+.mfp-counter {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+      user-select: none;
+}
+.mfp-loading.mfp-figure {
+  display: none;
+}
+.mfp-hide {
+  display: none !important;
+}
+.mfp-preloader {
+  color: #CCC;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  text-align: center;
+  margin-top: -0.8em;
+  left: 8px;
+  right: 8px;
+  z-index: 1044;
+}
+.mfp-preloader a {
+  color: #CCC;
+}
+.mfp-preloader a:hover {
+  color: #FFF;
+}
+.mfp-s-ready .mfp-preloader {
+  display: none;
+}
+.mfp-s-error .mfp-content {
+  display: none;
+}
+button.mfp-close,
+button.mfp-arrow {
+  overflow: visible;
+  cursor: pointer;
+  background: transparent;
+  border: 0;
+  -webkit-appearance: none;
+  display: block;
+  outline: none;
+  padding: 0;
+  z-index: 1046;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  -ms-touch-action: manipulation;
+      touch-action: manipulation;
+}
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+.mfp-close {
+  width: 44px;
+  height: 44px;
+  line-height: 44px;
+  position: absolute;
+  right: 0;
+  top: 0;
+  text-decoration: none;
+  text-align: center;
+  opacity: 0.65;
+  padding: 0 0 18px 10px;
+  color: #FFF;
+  font-style: normal;
+  font-size: 28px;
+  font-family: Arial, Baskerville, monospace;
+}
+.mfp-close:hover,
+.mfp-close:focus {
+  opacity: 1;
+}
+.mfp-close:active {
+  top: 1px;
+}
+.mfp-close-btn-in .mfp-close {
+  color: #333;
+}
+.mfp-image-holder .mfp-close,
+.mfp-iframe-holder .mfp-close {
+  color: #FFF;
+  right: -6px;
+  text-align: right;
+  padding-right: 6px;
+  width: 100%;
+}
+.mfp-counter {
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #CCC;
+  font-size: 12px;
+  line-height: 18px;
+  white-space: nowrap;
+}
+.mfp-arrow {
+  position: absolute;
+  opacity: 0.65;
+  margin: 0;
+  top: 50%;
+  margin-top: -55px;
+  padding: 0;
+  width: 90px;
+  height: 110px;
+  -webkit-tap-highlight-color: transparent;
+}
+.mfp-arrow:active {
+  margin-top: -54px;
+}
+.mfp-arrow:hover,
+.mfp-arrow:focus {
+  opacity: 1;
+}
+.mfp-arrow:before,
+.mfp-arrow:after {
+  content: '';
+  display: block;
+  width: 0;
+  height: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin-top: 35px;
+  margin-left: 35px;
+  border: medium inset transparent;
+}
+.mfp-arrow:after {
+  border-top-width: 13px;
+  border-bottom-width: 13px;
+  top: 8px;
+}
+.mfp-arrow:before {
+  border-top-width: 21px;
+  border-bottom-width: 21px;
+  opacity: 0.7;
+}
+.mfp-arrow-left {
+  left: 0;
+}
+.mfp-arrow-left:after {
+  border-right: 17px solid #FFF;
+  margin-left: 31px;
+}
+.mfp-arrow-left:before {
+  margin-left: 25px;
+  border-right: 27px solid #3F3F3F;
+}
+.mfp-arrow-right {
+  right: 0;
+}
+.mfp-arrow-right:after {
+  border-left: 17px solid #FFF;
+  margin-left: 39px;
+}
+.mfp-arrow-right:before {
+  border-left: 27px solid #3F3F3F;
+}
+.mfp-iframe-holder {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.mfp-iframe-holder .mfp-content {
+  line-height: 0;
+  width: 100%;
+  max-width: 900px;
+}
+.mfp-iframe-holder .mfp-close {
+  top: -40px;
+}
+.mfp-iframe-scaler {
+  width: 100%;
+  height: 0;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+.mfp-iframe-scaler iframe {
+  position: absolute;
+  display: block;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+  background: #000;
+}
+/* Main image in popup */
+img.mfp-img {
+  width: auto;
+  max-width: 100%;
+  height: auto;
+  display: block;
+  line-height: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding: 40px 0 40px;
+  margin: 0 auto;
+}
+/* The shadow behind the image */
+.mfp-figure {
+  line-height: 0;
+}
+.mfp-figure:after {
+  content: '';
+  position: absolute;
+  left: 0;
+  top: 40px;
+  bottom: 40px;
+  display: block;
+  right: 0;
+  width: auto;
+  height: auto;
+  z-index: -1;
+  -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+          box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+  background: #444;
+}
+.mfp-figure small {
+  color: #BDBDBD;
+  display: block;
+  font-size: 12px;
+  line-height: 14px;
+}
+.mfp-figure figure {
+  margin: 0;
+}
+.mfp-bottom-bar {
+  margin-top: -36px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  cursor: auto;
+}
+.mfp-title {
+  text-align: left;
+  line-height: 18px;
+  color: #F3F3F3;
+  word-wrap: break-word;
+  padding-right: 36px;
+}
+.mfp-image-holder .mfp-content {
+  max-width: 100%;
+}
+.mfp-gallery .mfp-image-holder .mfp-figure {
+  cursor: pointer;
+}
+/* Styles for dialog window */
+#small-dialog {
+  background: white;
+  padding: 20px 30px;
+  text-align: left;
+  max-width: 1000px;
+  margin: 40px auto;
+  position: relative;
+}
+/**
+ * Fade-zoom animation for first dialog
+ */
+/* start state */
+.my-mfp-zoom-in .zoom-anim-dialog {
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);
+}
+/* animate in */
+.my-mfp-zoom-in.mfp-ready .zoom-anim-dialog {
+  opacity: 1;
+  -webkit-transform: scale(1);
+  transform: scale(1);
+}
+/* animate out */
+.my-mfp-zoom-in.mfp-removing .zoom-anim-dialog {
+  -webkit-transform: scale(0.8);
+  transform: scale(0.8);
+  opacity: 0;
+}
+/* Dark overlay, start state */
+.my-mfp-zoom-in.mfp-bg {
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
+}
+/* animate in */
+.my-mfp-zoom-in.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+/* animate out */
+.my-mfp-zoom-in.mfp-removing.mfp-bg {
+  opacity: 0;
+}
+/**
+ * Fade-move animation for second dialog
+ */
+/* at start */
+.my-mfp-slide-bottom .zoom-anim-dialog {
+  opacity: 0;
+  -webkit-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+  -webkit-transform: translateY(-20px) perspective(600px) rotateX(10deg);
+  transform: translateY(-20px) perspective(600px) rotateX(10deg);
+}
+/* animate in */
+.my-mfp-slide-bottom.mfp-ready .zoom-anim-dialog {
+  opacity: 1;
+  -webkit-transform: translateY(0) perspective(600px) rotateX(0);
+  transform: translateY(0) perspective(600px) rotateX(0);
+}
+/* animate out */
+.my-mfp-slide-bottom.mfp-removing .zoom-anim-dialog {
+  opacity: 0;
+  -webkit-transform: translateY(-10px) perspective(600px) rotateX(10deg);
+  transform: translateY(-10px) perspective(600px) rotateX(10deg);
+}
+/* Dark overlay, start state */
+.my-mfp-slide-bottom.mfp-bg {
+  opacity: 0;
+  -webkit-transition: opacity 0.3s ease-out;
+  transition: opacity 0.3s ease-out;
+}
+/* animate in */
+.my-mfp-slide-bottom.mfp-ready.mfp-bg {
+  opacity: 0.8;
+}
+/* animate out */
+.my-mfp-slide-bottom.mfp-removing.mfp-bg {
+  opacity: 0;
 }
 @media (min-width: 0px) and (max-width: 768px) {
   .plan__title {
     font-size: 16px;
   }
   .plan {
-    padding-top: 80px;
+    padding-top: 120px;
     padding-bottom: 120px;
   }
   .plan__item--mob {
@@ -2133,8 +2619,8 @@ input[type=range]::-ms-fill-lower {
     font-size: 16px;
   }
   .advantage {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 120px;
   }
   .advantage__title {
     text-align: center;
@@ -2170,13 +2656,14 @@ input[type=range]::-ms-fill-lower {
   }
   .why__main-title {
     text-align: center;
+    max-width: 240px;
     font-size: 20px;
-    padding: 0;
-    margin: 0 0 30px;
+    padding-right: 0;
+    margin: 0 auto 30px;
   }
   .why__main-title::after {
     top: -25px;
-    right: 45px;
+    right: -34px;
     width: 57px;
     height: 57px;
     background-size: 57px 57px;
@@ -2221,7 +2708,7 @@ input[type=range]::-ms-fill-lower {
     border-radius: 0;
     padding: 0;
     overflow: hidden;
-    height: 230px;
+    height: 240px;
     position: relative;
     border: 0px solid #ffffff;
     border-top: 10px solid #ffffff;
@@ -2230,6 +2717,12 @@ input[type=range]::-ms-fill-lower {
   .contacts__address--wrapper p,
   .contacts__address--wrapper a {
     font-size: 12px;
+  }
+  .contacts__map-desc {
+    display: none;
+  }
+  .contacts__map-mob {
+    display: block;
   }
   .main__phone--footer {
     display: none;
@@ -2316,6 +2809,22 @@ input[type=range]::-ms-fill-lower {
   .popup--form {
     padding: 30px 10px;
   }
+  .popup--form #username {
+    margin: 0 0 10px;
+  }
+  form input {
+    padding: 12px 15px;
+  }
+  form .btn_block .btn {
+    font-size: 14px;
+    /*padding: 14px;*/
+  }
+  form label {
+    font-size: 10px;
+  }
+  .popup--form {
+    padding: 30px 10px;
+  }
   .popup--form .title {
     font-size: 18px;
   }
@@ -2323,9 +2832,25 @@ input[type=range]::-ms-fill-lower {
     margin: 0 0 10px;
   }
 }
+@media (max-width: 1279px) {
+  form .btn_block {
+    margin: 20px auto 0;
+  }
+  form .btn_block .btn {
+    font-size: 18px;
+  }
+}
+@media (max-width: 1023px) {
+  form .btn_block .btn {
+    font-size: 16px;
+  }
+  form label {
+    margin: 15px 0 0;
+  }
+}
 @media screen and (max-width: 960px) {
   .main {
-    padding-bottom: 50px;
+    padding-bottom: 100px;
   }
   .main__img {
     position: static;
@@ -2571,5 +3096,71 @@ input[type=range]::-ms-fill-lower {
     max-width: 580px;
     width: 100%;
     height: auto;
+  }
+}
+@media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
+  /**
+       * Remove all paddings around the image on small screen
+       */
+  .mfp-img-mobile .mfp-image-holder {
+    padding-left: 0;
+    padding-right: 0;
+  }
+  .mfp-img-mobile img.mfp-img {
+    padding: 0;
+  }
+  .mfp-img-mobile .mfp-figure:after {
+    top: 0;
+    bottom: 0;
+  }
+  .mfp-img-mobile .mfp-figure small {
+    display: inline;
+    margin-left: 5px;
+  }
+  .mfp-img-mobile .mfp-bottom-bar {
+    background: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    margin: 0;
+    top: auto;
+    padding: 3px 5px;
+    position: fixed;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+  }
+  .mfp-img-mobile .mfp-bottom-bar:empty {
+    padding: 0;
+  }
+  .mfp-img-mobile .mfp-counter {
+    right: 5px;
+    top: 3px;
+  }
+  .mfp-img-mobile .mfp-close {
+    top: 0;
+    right: 0;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    background: rgba(0, 0, 0, 0.6);
+    position: fixed;
+    text-align: center;
+    padding: 0;
+  }
+}
+@media all and (max-width: 900px) {
+  .mfp-arrow {
+    -webkit-transform: scale(0.75);
+    transform: scale(0.75);
+  }
+  .mfp-arrow-left {
+    -webkit-transform-origin: 0;
+    transform-origin: 0;
+  }
+  .mfp-arrow-right {
+    -webkit-transform-origin: 100%;
+    transform-origin: 100%;
+  }
+  .mfp-container {
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
