--- a/css/style.css
+++ b/css/style.css
@@ -943,6 +943,7 @@ form input {
           box-sizing: border-box;
   padding: 18px 20px;
   font-size: 16px;
+  margin-bottom: 20px;
   font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
 }
 form .btn_block {
