--- a/css/style.css
+++ b/css/style.css
@@ -534,8 +534,6 @@ input[type=range]::-webkit-slider-runnable-track {
   max-width: 100%;
   height: 3px;
   border: none;
-  /*box-shadow:inset 0px 0px 1px rgba(0,0,0,0.1);
-    -webkit-box-shadow:inset 0px 0px 1px rgba(0,0,0,0.1);*/
   border-radius: 20px;
   background-color: #fbd640;
 }
@@ -624,7 +622,7 @@ input[type=range]::-ms-fill-lower {
   text-align: left;
   max-width: 330px;
   width: 100%;
-  margin-bottom: 26px;
+  margin-bottom: 0px;
 }
 .form__input {
   -webkit-box-sizing: border-box;
@@ -1023,12 +1021,21 @@ form input[type=checkbox]:checked + label span:before {
   padding-bottom: 350px;
   overflow: hidden;
 }
+.main--thanks {
+  background-size: cover;
+  padding-bottom: 200px;
+  height: 70vh;
+}
 .main__img {
   margin-top: auto;
   position: absolute;
   top: 33%;
   right: 0;
   max-width: 60%;
+}
+.main__img--thanks {
+  max-width: 45%;
+  /*padding-bottom: 200px;*/
 }
 .main img {
   display: block;
@@ -1439,7 +1446,6 @@ form input[type=checkbox]:checked + label span:before {
 .advantage {
   width: 100%;
   height: 100%;
-  /*background-color: #aee1fb;*/
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   position: relative;
@@ -1450,18 +1456,6 @@ form input[type=checkbox]:checked + label span:before {
   padding-top: 250px;
   padding-bottom: 250px;
 }
-/*.advantage::before {
-	position: absolute;
-	content: "";
-	left: 0;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	background-image: url(../img/cloud-top.png);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}*/
 .advantage__wrapper {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1522,18 +1516,6 @@ form input[type=checkbox]:checked + label span:before {
   width: 100%;
   height: auto;
 }
-/*.advantage__items::before {
-	position: absolute;
-	content: "";
-	right: 0;
-	top: 20%;
-	width: 460px;
-	height: 230px;
-	background-image: url(../img/perforator.png);
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: contain;
-}*/
 .advantage__item {
   margin: 0;
   padding: 0;
@@ -2556,6 +2538,27 @@ img.mfp-img {
 @media (min-width: 869px) and (max-width: 1200px) {
   .why__item {
     width: 33%;
+  }
+}
+@media screen and (min-width: 1080px) {
+  .main--thanks {
+    background-size: cover;
+    padding-bottom: 350px;
+    height: auto;
+  }
+}
+@media screen and (min-width: 1160px) {
+  .main--thanks {
+    background-size: cover;
+    padding-bottom: 350px;
+    /*height: 90vh;*/
+  }
+}
+@media screen and (min-width: 1528px) {
+  .main--thanks {
+    background-size: cover;
+    padding-bottom: 200px;
+    height: 90vh;
   }
 }
 @media screen and (max-width: 728px) {
