--- a/css/style.css
+++ b/css/style.css
@@ -476,6 +476,9 @@ template {
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
 }
+.main__btn--footer {
+  padding-top: 0px;
+}
 .form {
   display: inline-block;
   position: relative;
@@ -1014,9 +1017,9 @@ form input[type=checkbox]:checked + label span:before {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   background-image: url(../img/bg1.jpg);
-  background-size: 100% contain;
+  background-size: auto;
   background-repeat: no-repeat;
-  background-position: top center;
+  background-position: center top;
   position: relative;
   padding-bottom: 350px;
   overflow: hidden;
@@ -1035,7 +1038,6 @@ form input[type=checkbox]:checked + label span:before {
 }
 .main__img--thanks {
   max-width: 45%;
-  /*padding-bottom: 200px;*/
 }
 .main img {
   display: block;
@@ -1109,7 +1111,8 @@ form input[type=checkbox]:checked + label span:before {
 }
 .main__social {
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-top: 5px;
 }
 .main__phone {
   display: -webkit-box;
@@ -1123,6 +1126,10 @@ form input[type=checkbox]:checked + label span:before {
       -ms-flex-align: end;
           align-items: flex-end;
   text-align: right;
+  /*padding-top: 13px;*/
+}
+.main__phone--header {
+  padding-top: 13px;
 }
 .main__tel {
   text-decoration: none;
@@ -1147,17 +1154,28 @@ form input[type=checkbox]:checked + label span:before {
   position: relative;
   z-index: 1;
 }
-.main__title--decor1::before,
-.main__title--decor2::before {
+.main__title--decor1::before {
   position: absolute;
   content: "";
-  width: 100%;
+  width: 93%;
   height: 15px;
   background-color: #fbd741;
+  right: 0;
   bottom: 15px;
   z-index: -1;
 }
+.main__title--decor2::before {
+  position: absolute;
+  content: "";
+  width: 93%;
+  height: 28px;
+  background-color: #fbd741;
+  bottom: 13px;
+  right: 3px;
+  z-index: -1;
+}
 .main__subtitle {
+  max-width: 870px;
   font-size: 24px;
   color: #000000;
   font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
@@ -1409,7 +1427,7 @@ form input[type=checkbox]:checked + label span:before {
 .description__item figcaption {
   margin: 0;
   padding: 0;
-  padding-left: 50px;
+  padding-left: 30px;
 }
 .description__item--big {
   max-width: calc(100% - 30px);
@@ -1437,11 +1455,13 @@ form input[type=checkbox]:checked + label span:before {
   font-family: 'museosanscyrl_700-webfont', Helvetica, Arial, sans-serif;
   font-size: 20px;
   text-align: left;
+  margin-bottom: 0px;
 }
 .description__item-subtitle {
   font-family: 'museosanscyrl_300-webfont', Helvetica, Arial, sans-serif;
   font-size: 16px;
   text-align: left;
+  margin-top: 13px;
 }
 .advantage {
   width: 100%;
@@ -1462,8 +1482,8 @@ form input[type=checkbox]:checked + label span:before {
   margin: 0 auto;
   max-width: 1170px;
   width: 100%;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .advantage__title {
   margin-top: 0;
@@ -1478,11 +1498,11 @@ form input[type=checkbox]:checked + label span:before {
 .advantage__title--decor::before {
   position: absolute;
   content: "";
-  width: 93%;
+  width: 90%;
   height: 15px;
   background-color: #fbd741;
   right: 3px;
-  bottom: 15px;
+  bottom: 12px;
   z-index: -1;
 }
 .advantage__subtitle {
@@ -1543,6 +1563,20 @@ form input[type=checkbox]:checked + label span:before {
   color: #000000;
   font-family: 'museosanscyrl_900-webfont', Helvetica, Arial, sans-serif;
 }
+.advantage__text2--decor {
+  z-index: 1;
+  position: relative;
+}
+.advantage__text2--decor::before {
+  position: absolute;
+  content: "";
+  width: 90%;
+  height: 11px;
+  background-color: #fbd741;
+  right: 3px;
+  bottom: 6px;
+  z-index: -1;
+}
 .calculator {
   width: 100%;
   height: 100%;
@@ -1565,24 +1599,19 @@ form input[type=checkbox]:checked + label span:before {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  /*background-image: url(../img/calc.png);
-	background-size: contain;
-	background-position-x: 100%;
-	background-position-y: center;
-	background-repeat: no-repeat;*/
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 .calculator__title {
-  margin: 50px auto 100px auto;
+  margin: 50px auto 0px auto;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   max-width: 970px;
   width: 100%;
   padding-left: 15px;
   padding-right: 15px;
-  font-size: 48px;
+  font-size: 32px;
   color: #000000;
   font-family: 'museosanscyrl_900-webfont', Helvetica, Arial, sans-serif;
 }
@@ -1591,7 +1620,7 @@ form input[type=checkbox]:checked + label span:before {
   width: 100%;
 }
 .calculator__right {
-  max-width: 255px;
+  max-width: 285px;
   width: 100%;
 }
 .calculator__right img {
@@ -1685,7 +1714,7 @@ form input[type=checkbox]:checked + label span:before {
   text-align: center;
 }
 .why__item--big {
-  width: 30%;
+  width: 28%;
 }
 .why__item p,
 .why__item h3 {
@@ -1726,7 +1755,7 @@ form input[type=checkbox]:checked + label span:before {
   margin: 0;
   margin-bottom: 50px;
   text-align: center;
-  font-size: 48px;
+  font-size: 32px;
   position: relative;
   padding-right: 10px;
   color: #000000;
@@ -1744,7 +1773,7 @@ form input[type=checkbox]:checked + label span:before {
 }
 .projects__item {
   max-width: 50%;
-  border-radius: 15px;
+  border-radius: 10px;
   background-color: #ffffff;
   padding: 10px;
   -webkit-box-shadow: 0 10px 20px 0 #dfdede;
@@ -1755,6 +1784,7 @@ form input[type=checkbox]:checked + label span:before {
   display: block;
   width: 100%;
   height: auto;
+  border-radius: 10px;
 }
 .plan {
   width: 100%;
@@ -1936,7 +1966,8 @@ form input[type=checkbox]:checked + label span:before {
 }
 .contacts__title {
   text-align: center;
-  font-size: 48px;
+  font-size: 32px;
+  margin-bottom: 40px;
   color: #000000;
   font-family: 'museosanscyrl_900-webfont', Helvetica, Arial, sans-serif;
 }
@@ -2017,17 +2048,15 @@ form input[type=checkbox]:checked + label span:before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  /*justify-content: space-between;*/
 }
 .footer__privacy {
   text-align: right;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 0px;
 }
 .footer__privacy a {
   color: #000;
@@ -2038,7 +2067,20 @@ form input[type=checkbox]:checked + label span:before {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 10px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  padding-top: 0px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.footer__social {
+  margin-left: auto;
+  margin-right: 20px;
+  margin-bottom: 12px;
 }
 .development {
   -webkit-box-sizing: border-box;
@@ -2049,6 +2091,7 @@ form input[type=checkbox]:checked + label span:before {
   padding-right: 15px;
   margin: 0 auto;
   text-align: right;
+  padding-top: 20px;
   padding-bottom: 20px;
 }
 .development__text {
@@ -2467,6 +2510,7 @@ img.mfp-img {
 @media (min-width: 0px) and (max-width: 768px) {
   .plan__title {
     font-size: 16px;
+    text-align: center;
   }
   .plan {
     padding-top: 120px;
@@ -2482,6 +2526,29 @@ img.mfp-img {
     margin: 0;
     padding: 0;
     padding-bottom: 20px;
+  }
+}
+@media (min-width: 529px) and (max-width: 728px) {
+  .main {
+    background-size: cover;
+    padding-bottom: 150px;
+    background-color: #aee1fb;
+    background-position: center 350px;
+  }
+}
+@media screen and (min-width: 729px) {
+  .main__tel img {
+    display: block;
+    width: 43px;
+    height: 43px;
+  }
+}
+@media (min-width: 729px) and (max-width: 960px) {
+  .main {
+    background-size: cover;
+    padding-bottom: 150px;
+    background-color: #aee1fb;
+    background-position: center 550px;
   }
 }
 @media (min-width: 729px) and (max-width: 1127px) {
@@ -2540,6 +2607,11 @@ img.mfp-img {
     width: 33%;
   }
 }
+@media screen and (min-width: 961px) {
+  .main__tel img {
+    display: none;
+  }
+}
 @media screen and (min-width: 1080px) {
   .main--thanks {
     background-size: cover;
@@ -2584,21 +2656,22 @@ img.mfp-img {
     height: 67px;
     background-size: 67px 67px;
   }
-  .calculator__title {
-    font-size: 20px;
-  }
   .form__num {
     max-width: 65px;
     width: 100%;
     height: 32px;
+    top: 0px;
   }
   .form__num output {
     font-size: 18px;
   }
   input[type=range] {
-    max-width: 260px;
-    width: 100%;
+    max-width: 280px;
+    width: 80%;
     height: 35px;
+  }
+  .form__row {
+    padding-top: 15px;
   }
   .main__logo img {
     width: 28px;
@@ -2608,11 +2681,10 @@ img.mfp-img {
     font-size: 14px;
   }
   .main__title {
-    font-size: 24px;
+    font-size: 34px;
   }
   .main__subtitle {
-    font-size: 18px;
-    padding-top: 30px;
+    font-size: 14px;
   }
   .main__title--decor1::before,
   .main__title--decor2::before {
@@ -2621,6 +2693,18 @@ img.mfp-img {
   }
   .main__descr {
     font-size: 16px;
+  }
+  .main__tel img {
+    display: block;
+    width: 27px;
+    height: 27px;
+  }
+  .main__item {
+    font-size: 14px;
+  }
+  .social__link {
+    width: 27px;
+    height: 27px;
   }
   .advantage {
     padding-top: 150px;
@@ -2644,19 +2728,32 @@ img.mfp-img {
   }
   .advantage__item {
     font-size: 20px;
+    margin-bottom: 25px;
   }
   .advantage__text1 {
     text-align: center;
-    font-size: 14px;
+    font-size: 13px;
+    line-height: 18px;
+    margin-bottom: 15px;
   }
   .advantage__text2 {
     text-align: center;
     font-size: 18px;
+    line-height: 28px;
+    margin-bottom: 15px;
   }
   .advantage__img {
     padding-top: 00px;
     max-width: 300px;
     width: 100%;
+  }
+  .calculator__title {
+    font-size: 14px;
+    text-align: center;
+    margin-bottom: 25px;
+  }
+  .calculator__text {
+    font-size: 14px;
   }
   .why__main-title {
     text-align: center;
@@ -2686,8 +2783,12 @@ img.mfp-img {
   .why__descr {
     font-size: 14px;
   }
+  .why {
+    padding-bottom: 200px;
+  }
   .projects__title {
     font-size: 20px;
+    margin-bottom: 40px;
   }
   .projects__item {
     max-width: 100%;
@@ -2702,11 +2803,28 @@ img.mfp-img {
     padding-right: 0px;
   }
   .contacts__title {
-    font-size: 20px;
+    font-size: 14px;
   }
   .contacts__address {
-    max-width: 200px;
+    max-width: 195px;
     left: 10px;
+  }
+  .contacts__address--address,
+  .contacts__address--time {
+    margin: 0;
+  }
+  .contacts__address--address {
+    margin-top: 10px;
+  }
+  .contacts__address--address span {
+    display: inline-block;
+    max-width: 96px;
+    width: 100%;
+  }
+  .contacts__address--time span {
+    display: block;
+    max-width: 122px;
+    width: 100%;
   }
   .contacts__map {
     border-radius: 0;
@@ -2730,6 +2848,9 @@ img.mfp-img {
   }
   .main__phone--footer {
     display: none;
+  }
+  .footer__social {
+    margin-bottom: 20px;
   }
 }
 @media screen and (max-width: 868px) {
@@ -2768,7 +2889,8 @@ img.mfp-img {
 }
 @media screen and (max-width: 527px) {
   input[type=range] {
-    max-width: 200px;
+    max-width: 250px;
+    width: 80%;
   }
   .form__btn {
     margin-top: 20px;
@@ -2781,6 +2903,7 @@ img.mfp-img {
   .form__input {
     line-height: 40px;
     height: 40px;
+    margin-bottom: 10px;
   }
   input[type=range]::-webkit-slider-thumb {
     height: 16px;
@@ -2800,7 +2923,20 @@ img.mfp-img {
 }
 @media screen and (max-width: 480px) {
   input[type=range] {
+    max-width: 200px;
+    width: 80%;
+  }
+}
+@media screen and (max-width: 418px) {
+  input[type=range] {
+    max-width: 160px;
+    width: 80%;
+  }
+}
+@media screen and (max-width: 360px) {
+  input[type=range] {
     max-width: 120px;
+    width: 80%;
   }
 }
 @media (max-width: 699px) {
@@ -2852,13 +2988,20 @@ img.mfp-img {
     margin: 15px 0 0;
   }
 }
-@media screen and (max-width: 960px) {
-  .main {
-    padding-bottom: 100px;
-  }
+@media screen and (max-width: 1060px) {
   .main__img {
+    margin-top: auto;
+    position: absolute;
+    top: 37%;
+    right: 0;
+    max-width: 60%;
+  }
+}
+@media screen and (max-width: 960px) {
+  .main__img--mob {
     position: static;
     max-width: 100%;
+    margin-bottom: 20px;
   }
   .main__title {
     text-align: center;
@@ -2869,9 +3012,6 @@ img.mfp-img {
   .main__items {
     max-width: 320px;
     margin: 50px auto;
-  }
-  .main__item {
-    font-size: 18px;
   }
   .main__btn2 {
     margin: 0 auto;
@@ -2885,33 +3025,17 @@ img.mfp-img {
   .main__img {
     display: none;
   }
-  .main__tel img {
-    display: block;
-    width: 27px;
-    height: 27px;
-  }
   .main__tel span {
     display: none;
   }
   .main__btn--header {
     display: none;
   }
-  .social__link {
-    width: 27px;
-    height: 27px;
+  .main__phone--header {
+    padding-top: 5px;
   }
-  .description__item {
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box;
-    max-width: calc(100% - 30px);
-    width: 100%;
-    margin-left: 15px;
+  .main__social {
     margin-right: 15px;
-    padding: 10px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    -webkit-box-shadow: 0px 10px 30px 0px #cfcdcd;
-            box-shadow: 0px 10px 30px 0px #cfcdcd;
   }
   .advantage__items--wrap {
     -webkit-box-orient: vertical;
@@ -2929,10 +3053,43 @@ img.mfp-img {
     margin: 0 auto;
   }
 }
+@media screen and (max-width: 528px) {
+  .main {
+    background-image: url(../img/bg-mob.jpg);
+    background-size: contain;
+    padding-bottom: 180px;
+    background-color: #aee1fb;
+    background-position: center 100%;
+  }
+  .main__wrapper {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
 @media screen and (max-width: 468px) {
   .social__link--footer {
     width: 50px;
     height: 50px;
+  }
+  .description__title {
+    margin-bottom: 40px;
+    font-size: 14px;
+  }
+  .description__item-title {
+    font-size: 13px;
+    text-align: center;
+    margin-bottom: 0px;
+  }
+  .description__item-subtitle {
+    font-size: 11px;
+    text-align: center;
+    margin-top: 13px;
+  }
+  .description__item figcaption {
+    padding-left: 0;
+  }
+  .projects__title {
+    font-size: 14px;
   }
   .footer__wrapper {
     -webkit-box-orient: vertical;
@@ -2948,7 +3105,6 @@ img.mfp-img {
   }
   .development {
     text-align: center;
-    margin-top: 15px;
   }
   .development__text {
     text-decoration: none;
@@ -2960,6 +3116,10 @@ img.mfp-img {
   }
   .main__logo--footer span {
     font-size: 16px;
+  }
+  .footer__social {
+    margin: 0;
+    margin-top: 20px;
   }
 }
 @media screen and (max-width: 820px) {
@@ -3047,6 +3207,19 @@ img.mfp-img {
   }
 }
 @media screen and (max-width: 768px) {
+  .description__item {
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    max-width: calc(100% - 10px);
+    width: 100%;
+    margin-left: 5px;
+    margin-right: 5px;
+    padding: 10px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    -webkit-box-shadow: 0px 10px 30px 0px #cfcdcd;
+            box-shadow: 0px 10px 30px 0px #cfcdcd;
+  }
   .why__item {
     width: 80%;
   }
@@ -3068,9 +3241,9 @@ img.mfp-img {
     color: #000000;
     font-family: 'museosanscyrl_900-webfont', Helvetica, Arial, sans-serif;
   }
-  .plan__title {
-    font-size: 30px;
-  }
+  /*.plan__title {
+		font-size: 30px;
+	}*/
   .plan__mob--main {
     width: 270px;
     height: 100%;
