--- a/css/style.css
+++ b/css/style.css
@@ -1878,6 +1878,8 @@ form input[type=checkbox]:checked + label span:before {
 .plan__img {
   margin: auto;
   position: relative;
+  max-width: 580px;
+  width: 100%;
 }
 .plan__num {
   display: -webkit-box;
@@ -3365,9 +3367,25 @@ img.mfp-img {
   .plan__img {
     display: none;
   }
+  .plan__wrapper {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
   .plan__mob {
+    max-width: 270px;
     display: block;
-    margin: auto;
+    margin: 0 auto;
   }
   .plan__mob--wrap {
     position: relative;
